--- a/public/instructions.html
+++ b/public/instructions.html
@@ -21,7 +21,10 @@
   </head>
   <body>
     <h1>INSTRUCTIONS</h1>
-    <p>To play the game, you have to download the 'Arduino' folder.
+    <a href="index.html"><button class="button" id="index" >Home</button></a>
+    <a href="rules.html"><button class="button" id="rules" >Rules</button></a>
+    <p>To play the game, you have to download the <a href="https://r-n-d.informatik.hs-augsburg.de:8080/jelllea/simon-says-submission/-/tree/master/public/Arduino">'Arduino' folder</a>.
+      The led is attached to pin D2, the left arm servo is on pin 9, the right arm pin is on 10.
       In this folder is an Arduino-Sketch called 'Showpose.ino'. Open the sketch and install the Funken library. To do this you have to click on Sketch - Include Library - Add .ZIP Library.
       We also use a motor shield, do the same with the Adafruit Motor Shield Library. After you installed the libraries you can upload the sketch to your Arduino.
       Now you can play the game. If you press the join button a pop-up window appears, you have to click on the port, where your Arduino is connected, and click on connect.
