--- a/public/index.html
+++ b/public/index.html
@@ -31,5 +31,17 @@
     
     <div id="canvas"></div>
     <div id="gui"></div>
+
+    <script>
+
+      //restoring the webgl context
+      let canvas = document.getElementById("canvas");
+      canvas.addEventListener("webglcontextlost", function(event) {
+          event.preventDefault();
+      }, false);
+
+      canvas.addEventListener(
+        "webglcontextrestored", setupWebGLStateAndResources, false);
+    </script>
   </body>
 </html>
